.repair-init/repo/pkg/plugins/policies/meshtimeout/plugin/testdata/basic_tcp_listener.golden.yaml
address:
  socketAddress:
    address: 127.0.0.1
    portValue: 10002
filterChains:
- filters:
  - name: envoy.filters.network.tcp_proxy
    typedConfig:
      '@type': type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
      cluster: backend
      idleTimeout: 30s
      statPrefix: kri_msvc_default___second-service_10002
name: kri_msvc_default___second-service_10002
trafficDirection: OUTBOUND
