.repair-init/repo/pkg/plugins/policies/meshtimeout/plugin/testdata/http_outbound_cluster.golden.yaml
connectTimeout: 10s
name: kri_msvc_default___other-service_10001
typedExtensionProtocolOptions:
  envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    commonHttpProtocolOptions:
      idleTimeout: 3600s
      maxConnectionDuration: 600s
      maxStreamDuration: 600s
