.repair-init/repo/pkg/plugins/policies/meshtimeout/plugin/testdata/real_mesh_service.cluster.golden.yaml
connectTimeout: 10s
name: kri_msvc_default_zone-1_backend-ns_backend_10001
typedExtensionProtocolOptions:
  envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
    '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
    commonHttpProtocolOptions:
      idleTimeout: 3600s
      maxConnectionDuration: 600s
      maxStreamDuration: 600s
