.repair-init/repo/pkg/plugins/policies/meshtimeout/plugin/testdata/zone_egress_sni_precedence.cluster.golden.yaml
resources:
- name: mes-http
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    connectTimeout: 3s
    name: mes-http
    typedExtensionProtocolOptions:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        '@type': type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        commonHttpProtocolOptions:
          idleTimeout: 13s
          maxConnectionDuration: 0s
          maxStreamDuration: 0s
- name: mes-tcp
  resource:
    '@type': type.googleapis.com/envoy.config.cluster.v3.Cluster
    name: mes-tcp
